# mosm

./: .gitignore  README.md  TEST_DATA.md  package.json  pnpm-lock.yaml
docs/: troubleshooting.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: binary_protocol.rs  history.rs  lib.rs  main.rs  osm_store.rs  pbf_parser.rs  polygon_assembler.rs  projection.rs  render_feature.rs  spatial_query.rs  types.rs
src-tauri/src/commands/: data.rs  editing.rs  mod.rs  query.rs
src/components/: ContextMenu.vue  FeaturePanel.vue  MapCanvas.vue  Sidebar.vue  TagEditor.vue  Toolbar.vue
src/composables/: useHistory.ts  useMapRenderer.ts  useOsmStore.ts
src/core/: binary-decoder.ts  ipc-bridge.ts  map-renderer.ts  projection.ts  render-styles.ts
src/core/types/: index.ts
testdata/: andorra-260222.osm.pbf  monaco-260222.osm.pbf
