[package]
name = "mosm"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mosm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- OSM 编辑器核心引擎 ---
# PBF 高速解析 (支持流式/并行)
osmpbf = "0.3"
# R-Tree 空间索引 (O(log n) 范围查询)
rstar = "0.12"
# 高并发无锁 HashMap (多线程安全的实体存储)
dashmap = "6"
# 内存到二进制的零开销转换 (ArrayBuffer 桥梁)
bytemuck = { version = "1", features = ["derive"] }
# 优雅的错误处理
anyhow = "1"

